// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`re-renders mermaid theme on html data-theme attribute change 1`] = `
<html
  data-theme="light"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</html>
`;

exports[`renders with diagram 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
/>
`;

exports[`renders with mermaid config 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
/>
`;
